Amelioration de tinymce
Modification du plugin latex pour avoir des commandes cliquables
Ajout dun bouton pour inserer videos youtube sur le site
Refonte de la iframe de gestion des medias pour avoir meilleur visuel
Correction bug affichage des puissances
Refonte de la iframe pour ajouter/editer les liens

--- a/app/webroot/js/tiny_mce/plugins/inlinepopups/template.htm
+++ b/app/webroot/js/tiny_mce/plugins/inlinepopups/template.htm
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="skins/clearlooks2/window.css" />
 </head>
 <body>
-
+test
 <div class="mceEditor">
 	<div class="clearlooks2" style="width:400px; height:100px; left:10px;">
 		<div class="mceWrapper">
