Maj Plugin YouTube for Tinymce
Ajout video possible depuis lien URL de la barre dadresse

--- a/app/webroot/js/tiny_mce/plugins/youtube/youtube.htm
+++ b/app/webroot/js/tiny_mce/plugins/youtube/youtube.htm
@@ -18,8 +18,8 @@
  <div class="mceActionPanel">
  <table>
  <tr>
- 	<td>URL de la vidéo (au format http://youtu.be/xxxx) 
-            <img title="Pour obtenir l'url de partage, sur le site de YouTube cliquer sur Partager et copier ici le lien qui apparait sous la vidéo" 
+ 	<td>URL de la vidéo
+            <img title="Pour obtenir l'url de partage au format http://youtu.be/xxxx, cliquer sur Partager sur le site de YouTube et copier ici le lien qui apparait sous la vidéo" 
                  src="/js/tiny_mce/plugins/info/img/question_tn.png" /></td>
  </tr>
  <tr>
